make device id int ...
