# backend/src/modules/electrometer/router.py
@@ -1,5 +1,4 @@
 import logging
-from datetime import timezone
 from fastapi import (
     APIRouter,
     BackgroundTasks,
@@ -14,9 +13,9 @@ from src.shared.models import BaseResponse, ConnectionStatus
 from src.modules.electrometer import module as electrometer_module
 from src.modules.electrometer.models import (
     ElectrometerSettings,
-    CurrentDataResponse,
-    CurrentData,
-    ElectrometerID,
+    ElectrometerDataResponse,
+    ElectrometerData,
+    ElectrometerName,
     ElectrometerSettingsSet,
     ElectrometerStatus,
     ElectrometerState,
@@ -29,7 +28,7 @@ logger = logging.getLogger(__name__)
 
 router = APIRouter(
     tags=["electrometer"],
-    prefix="",
+    prefix="/electrometer",
 )
 
 
@@ -40,7 +39,7 @@ def assert_connected(controller: ControllerDep):
     if controller.state.get().connection_status != ConnectionStatus.CONNECTED:
         raise HTTPException(
             status_code=status.HTTP_400_BAD_REQUEST,
-            detail=f"{controller.device_id.value} is not connected. Please connect first.",
+            detail=f"{controller.device_name} is not connected. Please connect first.",
         )
 
 
@@ -51,7 +50,7 @@ def assert_idle(controller: ControllerDep):
     if controller.state.get().status != ElectrometerStatus.IDLE:
         raise HTTPException(
             status_code=status.HTTP_400_BAD_REQUEST,
-            detail=f"{controller.device_id.value} is not idle. Please stop any ongoing measurements first.",
+            detail=f"{controller.device_name} is not idle. Please stop any ongoing measurements first.",
         )
 
 
@@ -62,7 +61,7 @@ def assert_no_errors(controller: ControllerDep):
     if controller.state.get().error is not None:
         raise HTTPException(
             status_code=status.HTTP_400_BAD_REQUEST,
-            detail=f"{controller.device_id.value} has pending error, reset the error.",
+            detail=f"{controller.device_name} has pending error, reset the error.",
         )
 
 
@@ -76,13 +75,13 @@ def connect_to_electrometer(
     if controller.state.get().connection_status == ConnectionStatus.CONNECTED:
         raise HTTPException(
             status_code=status.HTTP_400_BAD_REQUEST,
-            detail=f"{controller.device_id.value} is already connected.",
+            detail=f"{controller.device_name.value} is already connected.",
         )
 
     resp = controller.connect_to_keysight_em(ip)
     background_tasks.add_task(controller.init_settings)
     return BaseResponse(
-        message=f"Connected to {controller.device_id.value} at {ip}, IDN: {resp}"
+        message=f"Connected to {controller.device_name.value} at {ip}, IDN: {resp}"
     )
 
 
@@ -93,7 +92,7 @@ def disconnect_electrometer(controller: ControllerDep):
     """
     assert_connected(controller)
     controller.disconnect_from_keysight_em()
-    return BaseResponse(message=f"Disconnected from {controller.device_id.value}.")
+    return BaseResponse(message=f"Disconnected from {controller.device_name}.")
 
 
 @router.post("/electrometers/reset", response_model=BaseResponse)
@@ -133,9 +132,9 @@ def set_electrometer_settings(
     assert_idle(controller)
     assert_no_errors(controller)
     controller.update_settings(settings)
-    canged_fields = controller.settings.get_changed_fields_compared_to_settings_before_change()
+    changed_fields = controller.settings.get_changed_fields_compared_to_settings_before_change()
     return BaseResponse(
-        message=f"Settings updated for {controller.device_id.value}. Changed fields: {canged_fields}"
+        message=f"Settings updated for {controller.device_name}. Changed fields: {changed_fields}"
     )
 
 
@@ -145,42 +144,42 @@ def reset_electrometer_error(controller: ControllerDep):
     Reset the error state of the electrometer.
     """
     controller.state.update(error=None)
-    return BaseResponse(message=f"Error state reset for {controller.device_id.value}.")
+    return BaseResponse(message=f"Error state reset for {controller.device_name}.")
 
 
-@router.get("/{device_id}/data", response_model=CurrentDataResponse)
+@router.get("/{device_id}/data", response_model=ElectrometerDataResponse)
 async def get_current_data(
-    device_id: ElectrometerID, session: SessionDep, time_frame: TimeFrameInputDep
+    device_id: int, session: SessionDep, time_frame: TimeFrameInputDep
 ):
     """
     Get the current data from the electrometer for a specified time frame.
     """
     statement = select(
-        CurrentData.time, CurrentData.current, CurrentData.device_id
-    ).where(CurrentData.device_id == device_id.value)
+        ElectrometerData.timestamp, ElectrometerData.current, ElectrometerData.device_id
+    ).where(ElectrometerData.device_id == device_id)
 
-    log_string = f"Fetching data from {device_id.value}"
+    log_string = f"Fetching data from electrometer {device_id}"
 
     if time_frame.start:
         log_string += f" from {time_frame.start}-{time_frame.start.tzinfo}"
-        statement = statement.where(CurrentData.time >= time_frame.start.timestamp())
+        statement = statement.where(ElectrometerData.timestamp >= time_frame.start.timestamp())
     if time_frame.end:
         log_string += f" to {time_frame.end}-{time_frame.end.tzinfo}"
-        statement = statement.where(CurrentData.time <= time_frame.end.timestamp())
+        statement = statement.where(ElectrometerData.timestamp <= time_frame.end.timestamp())
 
     logger.info(log_string)
 
     # sort by timestamp ascending
-    statement = statement.order_by(asc(CurrentData.time))
+    statement = statement.order_by(asc(ElectrometerData.timestamp))
 
     session_hr = session.exec(statement).all()
 
-    time, current, device_ids = zip(*session_hr) if session_hr else ([], [], [])
+    time, current, _ = zip(*session_hr) if session_hr else ([], [], [])    
 
-    return CurrentDataResponse(
-        device_id=device_ids[0] if device_ids else device_id.value,
+    return ElectrometerDataResponse(
+        device_name=ElectrometerName("electrometer_" + str(device_id)),
         current=list(current),
-        time=list(time),
+        timestamp=list(time),
     )
 
 
@@ -194,7 +193,7 @@ def start_continuous_measurement(controller: ControllerDep):
     assert_no_errors(controller)
     controller.start_continuous_measurement()
     return BaseResponse(
-        message=f"Continuous measurement started for {controller.device_id.value}"
+        message=f"Continuous measurement started for {controller.device_name}"
     )
 
 
@@ -205,7 +204,7 @@ def stop_continuous_measurement(controller: ControllerDep):
     """
     controller.stop_continuous_measurement()
     return BaseResponse(
-        message=f"Continuous measurement stopped for {controller.device_id.value}"
+        message=f"Continuous measurement stopped for {controller.device_name}"
     )
 
 
@@ -220,7 +219,7 @@ def initialize_trigger_based_measurement(controller: ControllerDep):
     assert_idle(controller)
     controller.init_trigger_based_measurement()
     return BaseResponse(
-        message=f"Trigger-based measurement initialized for {controller.device_id.value}"
+        message=f"Trigger-based measurement initialized for {controller.device_name}"
     )
 
 
@@ -239,21 +238,23 @@ def start_trigger_based_measurement(
     if controller.trigger_based_measurement_running:
         raise HTTPException(
             status_code=status.HTTP_400_BAD_REQUEST,
-            detail=f"Trigger-based measurement is already running for {controller.device_id.value}.",
+            detail=f"Trigger-based measurement is already running for {controller.device_name}.",
         )
 
     background_tasks.add_task(controller.do_trigger_based_measurement)
     return BaseResponse(
-        message=f"Trigger-based measurement started for {controller.device_id.value}"
+        message=f"Trigger-based measurement started for {controller.device_name}"
     )
 
 
 @router.websocket("/ws/{device_id}")
-async def electrometer_ws(websocket: WebSocket, device_id: str):
-    await ws_manager.connect(device_id, websocket)
+async def electrometer_ws(websocket: WebSocket, controller: ControllerDep):
+    device_name = controller.device_name.value
+    await ws_manager.connect(device_name, websocket)
     try:
+        logger.info("WebSocket connection established for %s", device_name)
         while True:
-            test = await websocket.receive_text()
-            logger.info("Received message from %s: %s", device_id, test)
+            message = await websocket.receive_text()
+            logger.info("Received websocket message from %s: %s", device_name, message)
     except WebSocketDisconnect:
-        await ws_manager.disconnect(device_id, websocket)
+        await ws_manager.disconnect(device_name, websocket)
